--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -12,7 +12,7 @@
     <% @artists.each do |artist| %>
       <tr>
         <td><%= artist.id %></td>
-        <td><%= link_to artist.name, artists_path(artist) %></td>
+        <td><%= link_to artist.name, artist_path(artist) %></td>
       </tr>
     <% end %>
   </tbody>
